myteo/test/analyze/type_check/type_cast/basic.myte
module test

fun intToString(x: int): string {
  return "";
}

fun main() {
  ((): unit);
  (1: int);
  (true: bool);
  ("": string);

  ((): int);
  (intToString: int);

  val x: bool = true;
  (x: unit);
}